# index-now-submit-sitemap-urls-action

./: .pre-commit-config.yaml  404.html  README.md  action.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  sitemap.xml  tags.json
.github/workflows/: codecov.yml  codeql.yml  docs.yml  index_now_submit_sitemap.yml  test.yml  test_docs.yml  test_submit_sitemap_action.yml  test_submit_sitemaps_action.yml  test_submit_urls_action.yml
docs/: index.md  requirements.txt
docs/index/: tags.md
docs/project/: donate.md  support-and-contribution.md
docs/user-guide/: getting-started.md  parameters.md  workflow-triggers.md
index/tags/: index.html
project/donate/: index.html
project/support-and-contribution/: index.html
search/: search_index.json
src/helper/: api_key_generator.py  result.py  submit.py  submit_fails.py  submit_sitemap.py
src/helper/index_now/: api_key.py  generate_api_key.py  submit_sitemap.py
src/helper/repository/: add_api_key_file.py  remove_api_key_file.py  shared.py
test/: api_key_generator_test.py  constant.py
test/_mock_data/: sitemap.py
test/helper/: get_endpoint_from_input_test.py  parse_sitemap_locations_test.py  parse_urls_test.py  submit_nothing_test.py  submit_sitemap_test.py  submit_sitemaps_test.py  submit_urls_test.py
test/helper/index_now/: api_key_generator_test.py  get_api_key_file_name_test.py  get_cli_input_parameters_test.py  get_endpoint_from_input_test.py  get_submit_sitemap_cli_input_parameters_test.py  get_submit_sitempa_cli_input_parameters_test.py
test/helper/parse/: endpoint_input_test.py  sitemap_days_ago_test.py  sitemap_filter_test.py  sitemap_locations_input_test.py  urls_input_test.py
test/helper/repository/: add_and_remove_api_key_file_test.py  add_and_remove_api_key_file_with_online_check_test.py  add_and_remove_api_key_file_without_online_check_test.py  get_name_of_current_git_branch_test.py  shared.py
test/helper/submit/: failure_test.py  nothing_test.py  sitemaps_test.py  urls_test.py
test/submit/: urls_test.py
user-guide/getting-started/: index.html
user-guide/parameters/: index.html
user-guide/workflow-triggers/: index.html
