[project]
name = "index-now-submit-sitemap-urls-action"
version = "0.1.0"
description = "Workflow to automatically submit your website's sitemap and URLs to IndexNow for faster indexing by Bing, Yandex, DuckDuckGo, and other search engines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorist~=1.8.11",
    "coverage~=7.13.1",
    "flake8==7.3.0",
    "index-now-for-python==1.0.19",
    "mkdocs==1.6.1",
    "mkdocs-git-revision-date-localized-plugin==1.5.1",
    "mkdocs-material==9.7.1",
    "mkdocs-material-extensions==1.3.1",
    "mkdocs-minify-plugin==0.8.0",
    "mkdocs-redirects==1.2.2",
    "mypy==1.19.1",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-xdist==3.8.0",
]

[tool.isort]
line_length = 120
