[project]
name = "index-now-submit-sitemap-urls-action"
version = "0.1.0"
description = "Workflow to automatically submit your website's sitemap and URLs to IndexNow for faster indexing by Bing, Yandex, DuckDuckGo, and other search engines"
authors = [
  { name = "Jakob Bagterp", email = "jakob_bagterp@hotmail.com" }
]
maintainers = [
  { name = "Jakob Bagterp", email = "jakob_bagterp@hotmail.com" }
]
license = { text = "MIT License" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["python", "index-now", "sitemap", "bing", "yandex", "duckduckgo", "seo"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "colorist~=1.8.11",
    "index-now-for-python==1.0.19",
]

[project.urls]
"Bug Tracker" = "https://github.com/jakob-bagterp/index-now-submit-sitemap-urls-action/issues"
"Documentation" = "https://jakob-bagterp.github.io/index-now-submit-sitemap-urls-action/"
"API Reference" = "https://jakob-bagterp.github.io/index-now-submit-sitemap-urls-action/user-guide/getting-started/"
"Source Code" = "https://github.com/jakob-bagterp/index-now-submit-sitemap-urls-action"
"Release Notes" = "https://github.com/jakob-bagterp/index-now-submit-sitemap-urls-action/releases"

[dependency-groups]
dev = [
    "coverage~=7.13.1",
    "mypy==1.19.1",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-xdist==3.8.0",
    "ruff==0.15.0",
]
docs = [
    "mkdocs==1.6.1",
    "mkdocs-git-revision-date-localized-plugin==1.5.1",
    "mkdocs-material==9.7.1",
    "mkdocs-material-extensions==1.3.1",
    "mkdocs-minify-plugin==0.8.0",
    "mkdocs-redirects==1.2.2",
]

[tool.mypy]
files = ["src"]
disallow_any_unimported = true
no_implicit_reexport = true
show_error_codes = true
strict = true
warn_unreachable = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501", "COM812"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
